--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -35,4 +35,93 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.content {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  width: 1140px;
+  margin: 133px 30px;
+  gap: 32px;
+  /*gap: 30px;*/
+  background-color: aquamarine;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+}
+
+.result__video-container {
+  width: 711px;
+  height: 386px;
+  margin-top: 78px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.search-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: start;
+  /*gap: ;*/
+  background-color: yellow;
+}
+
+.content__details {
+  max-width: 399px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 26px;
+  background-color: rgb(0, 255, 136);
+}
+
+.title {
+  background-color: thistle;
+}
+
+.content__list {
+  max-height: 298px;
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+}
+
+.content__list-item {
+  margin-bottom: 30px;
+}
+
+.content__list-item:last-child {
+  margin-bottom: 0px;
+}
+
+.content__video-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  /*min-width: 200px;
+  min-height: 101px;*/
+  min-width: 194px;
+  min-height: 103px;
+  background-color: tomato;
 }
