--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,7 @@ ol {
   width: 711px;
   height: 386px;
   margin-top: 78px;
+  position: relative;
 }
 
 .result__video {
@@ -94,6 +95,7 @@ ol {
   display: flex;
   flex-direction: column;
   overflow: auto;
+  position: relative;
 }
 
 .content__list-item {
