--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,16 @@ ol {
   list-style: none;
 }
 
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
 .content {
   display: flex;
   flex-direction: row;
@@ -45,7 +55,6 @@ ol {
   margin: 133px 30px;
   gap: 32px;
   /*gap: 30px;*/
-  background-color: aquamarine;
 }
 
 .result {
@@ -73,25 +82,87 @@ ol {
   flex-direction: row;
   justify-content: space-between;
   align-items: start;
-  /*gap: ;*/
-  background-color: yellow;
+  gap: 40px;
+}
+
+.search-form__textfield {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.6px;
+  text-align: left;
+  border: none;
+  border-top: 1px solid #ffffff;
+  border-bottom: 1px solid #ffffff;
+  background-color: #1b1919;
+  color: #ffffff;
+  width: 225px;
+  appearance: none;
+  cursor: pointer;
+}
+
+.search-form__fieldset {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  gap: 5px;
+  line-height: 21.6px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+  width: fit-content;
+}
+
+.search-form__label {
+  display: flex;
+  gap: 5px;
+  width: fit-content;
+}
+
+.search-form__pseudo-checkbox {
+  width: 19px;
+  height: 19px;
+  border: 1px solid #ffffff;
+  cursor: pointer;
+}
+
+.search-form__label-text {
+}
+
+.search-form__fieldset-title {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.6px;
+  text-align: left;
 }
 
 .content__details {
   max-width: 399px;
-  height: 100%;
   display: flex;
   flex-direction: column;
   row-gap: 26px;
-  background-color: rgb(0, 255, 136);
+  justify-content: flex-start;
 }
 
 .title {
-  background-color: thistle;
+  width: 260px;
+  height: 210px;
+  font-family: "Oswald", sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 70.5px;
+}
+
+.content__accent {
+  opacity: 30%;
 }
 
 .content__list {
-  max-height: 298px;
+  height: 298px;
   display: flex;
   flex-direction: column;
   overflow: auto;
@@ -111,6 +182,7 @@ ol {
   flex-direction: row;
   justify-content: space-between;
   align-items: start;
+  padding: 2px;
 }
 
 .content__video-card-thumbnail {
@@ -121,9 +193,47 @@ ol {
 }
 
 .content__video-card-description-container {
-  /*min-width: 200px;
-  min-height: 101px;*/
-  min-width: 194px;
-  min-height: 103px;
-  background-color: tomato;
+  display: flex;
+  flex-direction: column;
+  row-gap: 6px;
+  min-width: 200px;
+  min-height: 101px;
+}
+
+.content__video-card-description {
+  line-height: 16.2px;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.content__video-card-title {
+  font-family: "Oswald", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 30px;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.button {
+  cursor: pointer;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 21.6px;
+  text-align: center;
+  color: #ffffff;
+  background-color: #1b1919;
+  border: 1px solid #ffffff;
+  height: 34px;
+  width: 100%;
+}
+
+.search-form__submit-button {
+  width: 194px;
+  margin-top: 20px;
+  gap: 10px;
 }
