--- a/styles/style.css
+++ b/styles/style.css
@@ -237,6 +237,10 @@ ol {
   gap: 10px;
 }
 
+.more-button {
+  padding-left: 18px;
+}
+
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   content: "";
   height: 15px;
@@ -254,6 +258,10 @@ ol {
 .search-form__label:has(:focus-visible) {
   outline: 1px solid #ffffff;
   outline-offset: 2px;
+}
+
+.search-form__textfield:active {
+  border: none;
 }
 
 .search-form__checkbox-list .search-form__label:hover {
@@ -275,4 +283,29 @@ ol {
 
 .button:active {
   background-color: #545050;
+}
+
+.content__card-link {
+  display: block;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__card-link:hover {
+  text-decoration: underline 1px solid;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #ffffff;
+  margin: 2px;
 }
