--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,6 @@ ol {
   flex-direction: row;
   align-items: flex-end;
   width: 1140px;
-  margin: 133px 30px;
   gap: 32px;
 }
 
@@ -78,7 +77,7 @@ ol {
 }
 
 .search-form__textfield {
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: inherit;
   font-size: 18px;
   font-weight: 400;
   line-height: 21.6px;
@@ -90,7 +89,6 @@ ol {
   color: #ffffff;
   width: 225px;
   appearance: none;
-  cursor: pointer;
 }
 
 .search-form__fieldset {
@@ -112,6 +110,8 @@ ol {
   gap: 5px;
   width: fit-content;
   cursor: pointer;
+  justify-content: center;
+  align-items: center;
 }
 
 .visually-hidden {
@@ -179,10 +179,11 @@ ol {
 }
 
 .content__video-card {
+  max-width: 398px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: start;
+  justify-content: space-around;
+  align-items: flex-start;
   padding: 2px;
 }
 
@@ -197,8 +198,11 @@ ol {
   display: flex;
   flex-direction: column;
   row-gap: 6px;
-  min-width: 200px;
-  min-height: 101px;
+  height: 101px;
+  width: 200px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .content__video-card-description {
@@ -217,6 +221,10 @@ ol {
   line-height: 30px;
   text-align: left;
   text-transform: uppercase;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 200px;
 }
 
 .button {
@@ -229,7 +237,7 @@ ol {
   color: #ffffff;
   background-color: #1b1919;
   border: 1px solid #ffffff;
-  height: 34px;
+  padding: 6px 0px;
   width: 100%;
 }
 
